@@ -25,15 +25,17 @@
 /*
  * HIP features (to be enabled/disabled via environment variables)
  */
-#define SCOREP_HIP_FEATURE_API     ( 1 << 0 )
-#define SCOREP_HIP_FEATURE_KERNELS ( 1 << 1 )
-#define SCOREP_HIP_FEATURE_MALLOC  ( 1 << 2 )
-#define SCOREP_HIP_FEATURE_MEMCPY  ( 1 << 3 )
-#define SCOREP_HIP_FEATURE_SYNC    ( 1 << 4 )
-#define SCOREP_HIP_FEATURE_USER    ( 1 << 4 )
+#define SCOREP_HIP_FEATURE_API             ( 1 << 0 )
+#define SCOREP_HIP_FEATURE_KERNELS         ( 1 << 1 )
+#define SCOREP_HIP_FEATURE_KERNEL_CALLSITE ( 1 << 2 )
+#define SCOREP_HIP_FEATURE_MALLOC          ( 1 << 3 )
+#define SCOREP_HIP_FEATURE_MEMCPY          ( 1 << 4 )
+#define SCOREP_HIP_FEATURE_SYNC            ( 1 << 5 )
+#define SCOREP_HIP_FEATURE_USER            ( 1 << 6 )
 #define SCOREP_HIP_FEATURES_DEFAULT \
     ( SCOREP_HIP_FEATURE_API | \
       SCOREP_HIP_FEATURE_KERNELS | \
+      SCOREP_HIP_FEATURE_KERNEL_CALLSITE | \
       SCOREP_HIP_FEATURE_MALLOC | \
       SCOREP_HIP_FEATURE_MEMCPY | \
       SCOREP_HIP_FEATURE_SYNC )
