@@ -37,6 +37,12 @@ static const SCOREP_ConfigType_SetEntry hip_enable_groups[] =
         "HIP kernels"
     },
     {
+        "kernel_callsite",
+        SCOREP_HIP_FEATURE_KERNEL_CALLSITE,
+        "Track kernel callsites between launch and execution. Depends on "
+        "'kernels', therefore enables that too"
+    },
+    {
         "malloc",
         SCOREP_HIP_FEATURE_MALLOC,
         "HIP allocations"
